[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/objects/cloud-platform/CloudPlatform.png" type="Texture" id=1]
[ext_resource path="res://src/objects/cloud-platform/CloudPlatform.gd" type="Script" id=2]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-5.png" type="Texture" id=3]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-6.png" type="Texture" id=4]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-4.png" type="Texture" id=5]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-3.png" type="Texture" id=6]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-1.png" type="Texture" id=7]
[ext_resource path="res://assets/art/sprites/enemy-death/enemy-death-2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8.02033 )

[sub_resource type="Animation" id=2]
resource_name = "shake"
length = 0.2
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.48207, 8.38385 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "explode",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=5]

[node name="CloudPlatform" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 7.97967 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 2 )

[node name="TriggerZone" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerZone"]
position = Vector2( 7.98207, 8.01362 )
shape = SubResource( 3 )

[node name="AnimatedSpriteExplosion" type="AnimatedSprite" parent="."]
position = Vector2( 7.14762, 2.31247 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )
animation = "idle"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RespawnBackOffTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CloudArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloudArea2D"]
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[connection signal="body_entered" from="TriggerZone" to="." method="_on_TriggerZone_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="RespawnBackOffTimer" to="." method="_on_RespawnBackOffTimer_timeout"]
[connection signal="body_entered" from="CloudArea2D" to="." method="_on_CloudArea2D_body_entered"]
[connection signal="body_exited" from="CloudArea2D" to="." method="_on_CloudArea2D_body_exited"]
